--- a/Skills.html
+++ b/Skills.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Habilidades | Irvin Prado</title>
+  <title>Skills | Irvin Prado</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -105,48 +105,13 @@
 </head>
 <body>
   <section class="section">
-    <h2>Lo que puedo aportar a tu negocio</h2>
-
+    <h2>Skills I Bring to Your Business</h2>
     <div class="skills-grid">
-
-      <!-- Hard Skills -->
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/globe.svg" alt="Inglés">
+        <img src="https://cdn-icons-png.flaticon.com/512/330/330439.png" alt="SQL">
         <div class="info">
-          <h4>Inglés C1</h4>
-          <p>Dominio bilingüe para comunicación efectiva en ambientes globales.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/monitor.svg" alt="PowerPoint">
-        <div class="info">
-          <h4>PowerPoint</h4>
-          <p>Diseño de presentaciones profesionales con enfoque corporativo.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/file-text.svg" alt="Word">
-        <div class="info">
-          <h4>Microsoft Word</h4>
-          <p>Manejo avanzado de herramientas de redacción y formato.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/edit.svg" alt="Copywriting">
-        <div class="info">
-          <h4>Redacción</h4>
-          <p>Claridad, estructura y tono profesional para documentos y correos.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/930b360e0ab79e08be0b537dc0b09e89e2e54c5a/assets/visuals/layers.svg" alt="Canva">
-        <div class="info">
-          <h4>Canva</h4>
-          <p>Diseño visual para materiales rápidos y funcionales.</p>
+          <h4>SQL</h4>
+          <p>Comfortable navigating structured databases, filtering and querying to generate reports and insights.</p>
         </div>
       </div>
 
@@ -154,74 +119,120 @@
         <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/bar-chart.svg" alt="Power BI">
         <div class="info">
           <h4>Power BI</h4>
-          <p>Creación de dashboards interactivos y storytelling visual.</p>
+          <p>Interactive dashboards and visual storytelling using DAX and report design best practices.</p>
         </div>
       </div>
 
       <div class="skill">
         <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/table.svg" alt="Excel">
         <div class="info">
-          <h4>Excel Avanzado</h4>
-          <p>Modelado, fórmulas y visualización de datos efectiva.</p>
+          <h4>Advanced Excel</h4>
+          <p>Data modeling, formulas, Power Query and dashboards for fast and accurate decisions.</p>
+        </div>
+      </div>
+
+      <div class="skill">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/layers.svg" alt="Canva">
+        <div class="info">
+          <h4>Canva</h4>
+          <p>Branded and modern visuals in short time for posts, emails and proposals.</p>
+        </div>
+      </div>
+
+      <div class="skill">
+        <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="Web Design">
+        <div class="info">
+          <h4>Web Design</h4>
+          <p>Basic front-end layouts and UX, theme consistency and branded messaging across pages.</p>
         </div>
       </div>
 
       <!-- Soft Skills -->
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/search.svg" alt="Pensamiento crítico">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/globe.svg" alt="English">
         <div class="info">
-          <h4>Pensamiento crítico</h4>
-          <p>Evaluación y mejora constante de decisiones y procesos.</p>
+          <h4>English C1</h4>
+          <p>Fluent communication in professional environments, both written and spoken.</p>
         </div>
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/book-open.svg" alt="Mejora continua">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/monitor.svg" alt="PowerPoint">
         <div class="info">
-          <h4>Mejora continua</h4>
-          <p>Busco formas nuevas de optimizar tiempo y energía.</p>
+          <h4>PowerPoint</h4>
+          <p>Clean and structured corporate slides and visual storytelling formats.</p>
         </div>
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/shuffle.svg" alt="Apertura mental">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/file-text.svg" alt="Word">
         <div class="info">
-          <h4>Apertura mental</h4>
-          <p>Flexibilidad para adaptarme a nuevas ideas o enfoques.</p>
+          <h4>Microsoft Word</h4>
+          <p>Advanced control over formatting, layout, and professional writing standards.</p>
         </div>
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/message-circle.svg" alt="Comunicación clara">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/edit.svg" alt="Writing">
         <div class="info">
-          <h4>Comunicación clara</h4>
-          <p>Mensajes estructurados y entendibles en cada entrega.</p>
+          <h4>Writing</h4>
+          <p>Clear structure and language for internal documents and public communication.</p>
         </div>
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/clock.svg" alt="Gestión del tiempo">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/search.svg" alt="Critical Thinking">
         <div class="info">
-          <h4>Gestión del tiempo</h4>
-          <p>Rutinas y entregas organizadas, enfocadas en eficiencia.</p>
+          <h4>Critical Thinking</h4>
+          <p>Evaluation of processes and outcomes with the goal of continuous improvement.</p>
         </div>
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/settings.svg" alt="Resolución de problemas">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/book-open.svg" alt="Continuous Improvement">
         <div class="info">
-          <h4>Resolución de problemas</h4>
-          <p>Soluciones rápidas y lógicas ante imprevistos.</p>
+          <h4>Continuous Improvement</h4>
+          <p>Consistently seeking new ways to save time, energy, and elevate results.</p>
         </div>
       </div>
 
+      <div class="skill">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/shuffle.svg" alt="Open Mindset">
+        <div class="info">
+          <h4>Open Mindset</h4>
+          <p>Quick to adapt and explore different approaches when improvement is possible.</p>
+        </div>
+      </div>
+
+      <div class="skill">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/message-circle.svg" alt="Communication">
+        <div class="info">
+          <h4>Clear Communication</h4>
+          <p>Written and verbal messages that are structured, polished, and direct.</p>
+        </div>
+      </div>
+
+      <div class="skill">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/clock.svg" alt="Time Management">
+        <div class="info">
+          <h4>Time Management</h4>
+          <p>Reliable execution of workflows, prioritization and progress tracking.</p>
+        </div>
+      </div>
+
+      <div class="skill">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/settings.svg" alt="Problem Solving">
+        <div class="info">
+          <h4>Problem Solving</h4>
+          <p>Calm and creative reaction to unexpected blockers or last-minute changes.</p>
+        </div>
+      </div>
     </div>
 
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html">Ver proyectos</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contáctame para aplicar estas habilidades</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html">See Projects</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Let's use these skills for your team</a>
     </div>
-
   </section>
 
   <footer>
