--- a/Skills.html
+++ b/Skills.html
@@ -108,7 +108,7 @@
     <h2>Skills I Bring to Your Business</h2>
     <div class="skills-grid">
       <div class="skill">
-        <img src="https://cdn-icons-png.flaticon.com/512/330/330439.png" alt="SQL">
+        <img src="https://c0.klipartz.com/pngpicture/28/601/gratis-png-ilustracion-del-logotipo-de-sql-base-de-datos-de-microsoft-sql-azure-servidor-de-microsoft-sql-base-de-datos-thumbnail.png" alt="SQL">
         <div class="info">
           <h4>SQL</h4>
           <p>Comfortable navigating structured databases, filtering and querying to generate reports and insights.</p>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/layers.svg" alt="Canva">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/773e28da9e818955450cdc4961986d4e1e90016f/assets/visuals/layers.svg" alt="Canva">
         <div class="info">
           <h4>Canva</h4>
           <p>Branded and modern visuals in short time for posts, emails and proposals.</p>
