--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contacto | Irvin Prado</title>
+  <title>Contact | Irvin Prado</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -88,24 +88,24 @@
 </head>
 <body>
   <div class="container">
-    <h2>¿Trabajamos juntos?</h2>
+    <h2>Shall we work together?</h2>
     <form action="https://formsubmit.co/irvyandl18@gmail.com" method="POST">
       <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html" />
-      <input type="text" name="name" placeholder="Tu nombre" required />
-      <input type="email" name="email" placeholder="Tu correo electrónico" required />
+      <input type="text" name="name" placeholder="Your name" required />
+      <input type="email" name="email" placeholder="Your email" required />
       <select name="service" required>
-        <option value="">¿Qué necesitas?</option>
-        <option value="asistencia">Asistencia Virtual</option>
-        <option value="bi">Dashboards e Inteligencia de Datos</option>
-        <option value="combinado">Asistencia + BI (Soluciones Integrales)</option>
-        <option value="otro">Otro tipo de colaboración</option>
+        <option value="">What service are you looking for?</option>
+        <option value="virtual_assistance">Virtual Assistance</option>
+        <option value="bi">Dashboards & Data Intelligence</option>
+        <option value="combined">Assistance + BI (Integrated Solutions)</option>
+        <option value="other">Other type of collaboration</option>
       </select>
-      <textarea name="message" placeholder="Cuéntame más sobre lo que necesitas" required></textarea>
-      <button type="submit">Enviar mensaje</button>
+      <textarea name="message" placeholder="Tell me more about your needs" required></textarea>
+      <button type="submit">Send message</button>
     </form>
     <div class="alt-contact">
-      <p>¿Prefieres escribirme directamente? Puedes hacerlo a <a href="mailto:irvyandl18@gmail.com">irvyandl18@gmail.com</a></p>
-      <p>O contactarme vía <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></p>
+      <p>Prefer to write me directly? You can do so at <a href="mailto:irvyandl18@gmail.com">irvyandl18@gmail.com</a></p>
+      <p>Or connect with me via <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></p>
     </div>
   </div>
   <footer>
