--- a/Skills.html
+++ b/Skills.html
@@ -107,7 +107,7 @@
     <h2>Skills I Bring to Your Business</h2>
     <div class="skills-grid">
       <div class="skill">
-        <img src="https://c0.klipartz.com/pngpicture/28/601/gratis-png-ilustracion-del-logotipo-de-sql-base-de-datos-de-microsoft-sql-azure-servidor-de-microsoft-sql-base-de-datos-thumbnail.png" alt="SQL">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2cdea032e82d2ec7887179025aa5ec14b375ac62/assets/visuals/cpu%20(1).svg" alt="SQL">
         <div class="info">
           <h4>SQL</h4>
           <p>Comfortable navigating structured databases, filtering and querying to generate reports and insights.</p>
