--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
       padding: 2rem;
       font-size: 0.875rem;
     }
+
+    @media (max-width: 600px) {
+      .buttons {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      .buttons a {
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -108,20 +120,20 @@
     <h1>For E-commerce, Agencies & Bilingual CEOs – Irvin’s Assistance</h1>
     <h2>Virtual Assistance + BI Dashboards = Your time and insights optimized</h2>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html" class="primary">See Visuals</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/Experience.html" class="secondary">See Experience</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html" class="secondary">See Skills</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html" class="primary">The Visuals I Build</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Experience.html" class="secondary">The Experience I Provide</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html" class="secondary">The Skills I Add</a>
     </div>
   </header>
 
   <div class="device-row">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Presentation Slide Preview">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Power BI Dashboard Mockup">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Business Email Screenshot">
+    <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Presentation Slide Preview">
+    <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Power BI Dashboard Mockup">
+    <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Business Email Screenshot">
   </div>
 
   <footer>
-    © 2025 Irvin Prado. Built with purpose and precision.
+    © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
   </footer>
 </body>
 </html>
