--- a/Projects.html
+++ b/Projects.html
@@ -120,11 +120,14 @@
     .footer-buttons {
       text-align: center;
       margin-top: 3rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
     }
 
     .footer-buttons a {
       text-decoration: none;
-      margin: 0 0.5rem;
       padding: 0.75rem 1.5rem;
       border-radius: 8px;
       font-weight: bold;
@@ -156,9 +159,9 @@
       <h3>Launch Plan – Script to Executive Presentation</h3>
       <p>Converted a detailed business script into a branded, clean PowerPoint presentation using visual storytelling and AI support. Designed for The Boulevard Food.</p>
       <p><strong>Skills:</strong> PowerPoint, visual formatting, structured writing</p>
-      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html" class="cta">Let me design presentations like this for your team</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" class="cta">Bring presentation design like this to your team</a>
       <div class="ppt-controls">
-        <img id="ppt-image" src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Slide 1">
+        <img id="ppt-image" src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Slide 1">
         <div class="ppt-buttons">
           <button id="prev" disabled>&larr; Prev</button>
           <button id="next">Next &rarr;</button>
@@ -171,17 +174,17 @@
       <h3>Annual Sales Dashboard – Fast, Visual Decision Making</h3>
       <p>Transformed 7,000+ rows into powerful visuals in Power BI. Fully interactive and auto-updating for ongoing analysis.</p>
       <p><strong>Skills:</strong> Power BI, DAX, data cleaning & modeling</p>
-      <a href="https://github.com/Irvyandl/VirtualAssitance/raw/refs/heads/main/assets/visuals/SalesReport.pbix" class="cta">Download and interact with this dashboard</a>
-      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Sales Dashboard">
+      <a href="https://github.com/Irvyandl/VirtualAssistance/raw/refs/heads/main/assets/visuals/SalesReport.pbix" class="cta">Download and interact with this dashboard</a>
+      <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Sales Dashboard">
     </div>
 
     <!-- Excel Pricing Analysis -->
     <div class="project">
       <h3>Supply Pricing Tracker – Timely Decisions from Trends</h3>
-      <p>Tracked key item pricing over 5 months using Excel. Trends were visualized and interpreted to support timely purchases.</p>
-      <p><strong>Skills:</strong> Excel (advanced formulas, charting), data trends analysis</p>
-      <a href="https://github.com/Irvyandl/VirtualAssitance/raw/refs/heads/main/assets/visuals/PricingReport.xlsx" class="cta">View pricing analysis report</a>
-      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Excel Pricing Report">
+      <p>Tracked key item pricing over 7 months using Excel. Trends were visualized and interpreted to support timely purchases.</p>
+      <p><strong>Skills:</strong> Excel (table design, charting), data trends analysis</p>
+      <a href="https://github.com/Irvyandl/VirtualAssistance/raw/refs/heads/main/assets/visuals/PricingReport.xlsx" class="cta">View pricing analysis report</a>
+      <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Excel Pricing Report">
     </div>
 
     <!-- Email Composition -->
@@ -189,28 +192,28 @@
       <h3>Business Email – Clear, Bilingual Communication</h3>
       <p>Wrote a bilingual business email summarizing meeting notes and pricing strategy in a professional tone.</p>
       <p><strong>Skills:</strong> Writing, business English, internal comms</p>
-      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html" class="cta">Need emails this clear? Let’s work together</a>
-      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Email Screenshot">
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" class="cta">Need emails this clear? Let’s work together</a>
+      <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Email Screenshot">
     </div>
 
     <div class="footer-buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contact Me</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/Experience.html">View Experience</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Contact Me</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Experience.html">View Experience</a>
     </div>
 
   </section>
 
   <footer>
-    © 2025 Irvin Prado. Built with purpose and precision.
+    © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
   </footer>
 
   <script>
     const pptImages = [
-      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true',
-      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(1).png?raw=true',
-      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(2).png?raw=true',
-      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(3).png?raw=true',
-      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(4).png?raw=true'
+      'https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740.png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740%20(1).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740%20(2).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740%20(3).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740%20(4).png?raw=true'
     ];
     let currentSlide = 0;
 
