--- a/Experience.html
+++ b/Experience.html
@@ -100,9 +100,25 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
+    @media (max-width: 768px) {
+      .mockup-row {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .mockup-row img {
+        flex: 1 1 100%;
+        max-width: 100%;
+      }
+    }
+
     .buttons {
       text-align: center;
       margin-top: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
     }
 
     .buttons a {
@@ -114,7 +130,6 @@
       transition: background 0.3s, color 0.3s;
       border: 2px solid var(--color-accent);
       color: var(--color-accent);
-      margin: 0 0.5rem;
     }
 
     .buttons a:hover {
@@ -141,28 +156,29 @@
           <li>Scheduling and vendor coordination</li>
           <li>Design of presentations and cost reports</li>
           <li>Business emails and promotional writing</li>
+          <li>Time management</li>
         </ul>
         <div class="icon-row">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/a9efd4ebac881ea87bcc51236177d05ab6541750/assets/visuals/mail.svg" alt="Mail icon">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Calendar icon">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist icon">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/a9efd4ebac881ea87bcc51236177d05ab6541750/assets/visuals/mail.svg" alt="Mail icon">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Calendar icon">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist icon">
         </div>
-        <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Add this experience to your team</a>
+        <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get this experience for your team now</a>
       </div>
       <div class="mockup-row">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Process flow mockup">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist mockup">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Email mockup">
+        <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Process flow mockup">
+        <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist mockup">
+        <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Email mockup">
       </div>
     </div>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contact Me</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html">View Skills</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Contact Me</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html">View Skills</a>
     </div>
   </section>
 
   <footer>
-    © 2025 Irvin Prado. Built with purpose and precision.
+    © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
   </footer>
 </body>
 </html>
