--- a/confirm.html
+++ b/confirm.html
@@ -1,8 +1,8 @@
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mensaje enviado | Irvin Prado</title>
+  <title>Message Sent! | Irvin Prado</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -16,25 +16,28 @@
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #F6F8FB, #E8F0F5);
       color: var(--color-text-dark);
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      min-height: 100vh;
+      padding: 2rem;
+      flex-direction: column;
+      text-align: center;
     }
 
     .confirmation-box {
       background-color: var(--color-light);
-      padding: 3rem;
+      padding: 3rem 2rem;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      text-align: center;
-      max-width: 500px;
+      max-width: 600px;
+      width: 100%;
     }
 
     h1 {
       font-family: 'Poppins', sans-serif;
-      font-size: 2rem;
+      font-size: 1.8rem;
       color: var(--color-accent);
       margin-bottom: 1rem;
     }
@@ -43,7 +46,7 @@
       font-size: 1.1rem;
     }
 
-    a {
+    a.button {
       display: inline-block;
       margin-top: 2rem;
       background-color: var(--color-accent);
@@ -55,16 +58,40 @@
       transition: background 0.3s;
     }
 
-    a:hover {
+    a.button:hover {
       background-color: #1d3b6c;
+    }
+
+    footer {
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #777;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .confirmation-box {
+        padding: 2rem 1.5rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="confirmation-box">
-    <h1>¡Mensaje enviado con éxito!</h1>
-    <p>Gracias por escribirme. Te responderé en menos de <strong>24 horas</strong>.</p>
-    <a href="https://irvyandl.github.io/VirtualAssitance/index.html">Volver al inicio</a>
+    <h1>Your message has been sent!</h1>
+    <p>Thank you for taking the first step toward working smarter. I’ll reach out to you in less than <strong>24 hours</strong> to explore how I can elevate your team's flow and results.</p>
+    <a class="button" href="https://irvyandl.github.io/VirtualAssistance/index.html">Back to Home</a>
   </div>
+
+  <footer>
+    © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+  </footer>
 </body>
 </html>
