--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -9,14 +10,15 @@
       --color-bg: #E8F0F5;
       --color-accent: #2F528F;
       --color-light: #FFFFFF;
-      --color-gray: #F6F8FB;
       --color-text-dark: #1A1A1A;
     }
+
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+
     body {
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #F6F8FB, #E8F0F5);
@@ -24,6 +26,7 @@
       line-height: 1.6;
       padding: 4rem 2rem;
     }
+
     .container {
       max-width: 700px;
       margin: auto;
@@ -32,6 +35,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
+
     h2 {
       font-family: 'Poppins', sans-serif;
       font-size: 2rem;
@@ -39,20 +43,24 @@
       color: var(--color-accent);
       text-align: center;
     }
+
     form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
+
     input, select, textarea {
       padding: 0.75rem 1rem;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1rem;
     }
+
     textarea {
       min-height: 120px;
     }
+
     button {
       background-color: var(--color-accent);
       color: white;
@@ -63,21 +71,26 @@
       cursor: pointer;
       transition: background 0.3s;
     }
+
     button:hover {
       background-color: #1d3b6c;
     }
+
     .alt-contact {
       text-align: center;
       margin-top: 2rem;
       font-size: 0.95rem;
     }
+
     .alt-contact a {
       color: var(--color-accent);
       text-decoration: none;
     }
+
     .alt-contact a:hover {
       text-decoration: underline;
     }
+
     footer {
       text-align: center;
       margin-top: 4rem;
@@ -90,9 +103,14 @@
   <div class="container">
     <h2>Shall we work together?</h2>
     <form action="https://formsubmit.co/irvyandl18@gmail.com" method="POST">
-      <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html" />
+      <!-- Redirection -->
+      <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssistance/confirm.html" />
+      <!-- Optional: disable CAPTCHA -->
+      <input type="hidden" name="_captcha" value="false" />
+
       <input type="text" name="name" placeholder="Your name" required />
       <input type="email" name="email" placeholder="Your email" required />
+
       <select name="service" required>
         <option value="">What service are you looking for?</option>
         <option value="virtual_assistance">Virtual Assistance</option>
@@ -100,16 +118,19 @@
         <option value="combined">Assistance + BI (Integrated Solutions)</option>
         <option value="other">Other type of collaboration</option>
       </select>
+
       <textarea name="message" placeholder="Tell me more about your needs" required></textarea>
       <button type="submit">Send message</button>
     </form>
+
     <div class="alt-contact">
       <p>Prefer to write me directly? You can do so at <a href="mailto:irvyandl18@gmail.com">irvyandl18@gmail.com</a></p>
       <p>Or connect with me via <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></p>
     </div>
   </div>
+
   <footer>
-    © 2025 Irvin Prado. Built with purpose and precision.
+    © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
   </footer>
 </body>
 </html>
