--- a/Skills.html
+++ b/Skills.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -129,7 +128,7 @@
     </div>
 
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html">See Projects</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html">The Visuals I build</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Add these skills to your team now!</a>
     </div>
   </section>
