--- a/Projects.html
+++ b/Projects.html
@@ -197,8 +197,8 @@
     </div>
 
     <div class="footer-buttons">
-      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Contact Me</a>
-      <a href="https://irvyandl.github.io/VirtualAssistance/Experience.html">View Experience</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get Visuals like these to your time now!</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Experience.html">The Experience I provide</a>
     </div>
 
   </section>
