--- a/Skills.html
+++ b/Skills.html
@@ -128,7 +128,7 @@
     </div>
 
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html">The Visuals I build</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html">The Visuals I Build</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Add these skills to your team now!</a>
     </div>
   </section>
