--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Shall we work together?</h2>
+    <h2>Let's take your team's perfomance higher!</h2>
     <form action="https://formsubmit.co/irvyandl18@gmail.com" method="POST">
       <!-- Redirection -->
       <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssistance/confirm.html" />
