--- a/Experience.html
+++ b/Experience.html
@@ -172,8 +172,8 @@
       </div>
     </div>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Contact Me</a>
-      <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html">View Skills</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get This Experience to your Team Now!</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html">The Skills I Add</a>
     </div>
   </section>
 
