--- a/Skills.html
+++ b/Skills.html
@@ -118,7 +118,7 @@
 </head>
 <body>
   <section class="section">
-    <h2>Skills I Bring to Your Business</h2>
+    <h2>Skills I Add To Your Team</h2>
     <div class="skills-grid">
       <div class="skill">
         <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2cdea032e82d2ec7887179025aa5ec14b375ac62/assets/visuals/cpu%20(1).svg" alt="SQL">
