--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="h9FqMW-A6hgkaiMBtHjYkHE1wE5fYtnNw7TedYHqhGw" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Irvin Prado | Virtual Assistance + BI</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
